Revision history for {{ $dist->name }}

{{$NEXT}}

v0.4.0    2018-12-04 10:36:59+00:00 Europe/London
  [Enhancements]
  - Added SmallInt, BigInt.

  [Documentation]
  - Updated Changes to refer to GitHub issues.

  - Fixed typo in POD.

  - Clarify relationship between some constrained types.

  [Tests]
  - Cleaned up test prereqs.

  [Other]
  - Minor code improvements.

v0.3.1    2018-11-18 11:46:52+00:00 Europe/London
  [Enhancements]
  - InstanceOf['JSON::PP::Boolean', 'Types::Serialiser::Boolean'] can be
    translated.

  [Bug Fixes]
  - Specify minimum version of Safe::Isa, #4 (Slaven Rezić).

  [Toolchain]
  - Clean up prereqs list.

  - Include cpanfile and MANIFEST.SKIP in distribution.

v0.3.0    2018-11-17 22:13:33+00:00 Europe/London
  [Enhancements]
  - Types::SQL::Util checks type library names.

  - Types::SQL::Util uses a lookup table for improved performance, and to make supporting
    additional type libraries easier.

  - Types::SQL::Util translates the following types from Types::Common::Numeric
    and Types::Common::String:
     * LowerCaseSimpleStr
     * LowerCaseStr
     * NonEmptySimpleStr
     * NonEmptyStr
     * PositiveInt
     * PositiveNum
     * SimpleStr
     * SingleDigit
     * UpperCaseSimpleStr
     * UpperCaseStr

  [Documentation]
  - Added a ROADMAP section to POD about planned changes.

  [Bug Fixes]
  - column_info_from_type checks that the type isa Type::Tiny object.

  [Tests]
  - Add more tests.

v0.2.1    2018-11-10 22:17:54+00:00 Europe/London
  [Bug Fixes]
  - Clean namespaces.

  - Frozen coercions.

  [Documentation]
  - Added INSTALL file to the distribution.

  - Bumped copyright year.

  [Toolchain]
  - Use a different Pod::Coverage plugin.

v0.2.0    2018-09-16 21:23:54+01:00 Europe/London
  [Enhancements]
  - Types::SQL::Util translates the following types:
     * PositiveOrZeroInt
     * Num
     * PositiveOrZeroNum
     * InstanceOf['DateTime::Tiny']
     * ArrayRef

  [Documentation]
  - Corrected typos.
