@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}
 
 {{$NEXT}}
+  [Toolchain]
+  - Removed use of Travis CI.
 
 v0.4.0    2018-12-04 10:36:59+00:00 Europe/London
   [Enhancements]
